@@ -1,4 +1,5 @@
 [3.0.4]
+        * [ADDED]: Import dialog has now "Ignore errors" option, to skip rows that causes problems (constraint violation, wrong column count, etc).
         * [CHANGE]: Enhanced Copy&Paste capabilities of data grid, so copying and pasting internally in SQLiteStudio will not be limited by TSV format (NULL values will be distinguished, tab characters will be allowed in values), only pasting from outside will be affected by TSV limitations.
         * [CHANGE]: "Invalid database" icon changed, so it's no longer confusing with "Connected" database.
         * [CHANGE]: "Databases" panel cannot be closed/hidden anymore.
